k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medlens-waitlist
  labels:
    name: medlens-waitlist
